tests/fixtures/invalid/import-9.py
v = 1  # Check 1
import os

import os  # Check 2
import os

v = 1  # Check 3
# Lorem ipsum dolor sit amet
import os

v = 1  # Check 4
"""
Lorem ipsum dolor sit amet
"""
import os

a = """
Multiline string assignment
"""
import os  # Check 5

for i in [1, 2]:  # Check 6
    v = 1
    import os

for i in [1, 2]:  # Check 7
    import os
    import os

print(1)  # Check 8
import os

import os  # Check 9
print(1)
